js/js.translator/testData/incremental/invalidation/interfaceSuperUsage/lib1/ClassB.3.kt
class ClassB : Interface {
    val x = 3
}
